--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 </head>
 <body>
 <div class="container">
-    <div class="title">ETCH A SKETCH</div>
-    <div class="buttons">
-        <button id="black-btn"> black </button>
-        <button id="random-btn"> random </button>
-        <button id="clear-btn"> clear </button>
-    </div>
-    <div>   
-        <div class="board"></div>
-        <div class="slidecontainer">
-            <input type="range" min="2" max="64" value="16" class="slider" id="myRange">
-            <div id="demo"></div>
+    <h1 class="title"> ETCH A SKETCH </h1>
+    <div class="boardgame">
+        <div class="buttons">
+            <button id="black-btn"> black </button>
+            <button id="random-btn"> random </button>
+            <button id="clear-btn"> clear </button>
         </div>
-    </div>
-     
+        <div>   
+            <div class="board"></div>
+            <div class="slidecontainer">
+                <input type="range" min="2" max="64" value="16" class="slider" id="myRange">
+                <div id="demo"></div>
+            </div>
+        </div>
+    </div> 
 </div>
 
     
