--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <h1 class="title"> ETCH A SKETCH </h1>
     <div class="boardgame">
         <div class="buttons">
-            <button id="black-btn"> black </button>
+            <label for="base">Base Color</label>
+            <input id="base" type="color" name="base" value="#ffc600">           
             <button id="random-btn"> random </button>
             <button id="clear-btn"> clear </button>
         </div>
         <div>   
             <div class="board"></div>
             <div class="slidecontainer">
+                <label for="'myRange">Grid size</label>
                 <input type="range" min="2" max="64" value="16" class="slider" id="myRange">
                 <div id="demo"></div>
             </div>
